cmake_minimum_required(VERSION 3.25)
project(20230723_nowcoder)

set(CMAKE_CXX_STANDARD 17)

add_executable(20230723_nowcoder main.cpp 统计成绩.cpp 密码验证.cpp 逆序输出.cpp 矩阵计算.cpp 统计数据正负个数.cpp 最高分与最低分之差.cpp 有序序列判断.cpp 序列中删除指定数字.cpp 序列中整数去重.cpp 有序序列合并.cpp HTTP.cpp 公务员面试.cpp 包含数字9的数.cpp 图像相似度.cpp 奇偶统计.cpp 数字三角形.cpp 有序序列插入一个数.cpp 登陆验证.cpp 筛选法求素数.cpp K形图案.cpp X形图案.cpp 反斜线图案.cpp 带空格直角三角形图案.cpp 空心三角形图案.cpp 空心正方形图案.cpp 箭形图案.cpp 翻转直角三角形图案.cpp 翻转金字塔图案.cpp 菱形图案.cpp 三角形判断.cpp 健康评估.cpp 直角三角形图案.cpp 简单计数器.cpp 获得月份天数.cpp 计算一元二次方程.cpp 计算单位阶跃函数.cpp 争夺前五名.cpp 判断原音还是辅音.cpp 判断字母.cpp 判断整数奇偶性.cpp 及格分数.cpp 喝酸奶.cpp 总成绩和平均分计算.cpp 时间转换.cpp 最高分数.cpp 竞选社长.cpp 统计成绩_2.cpp 网购.cpp 计算平均成绩.cpp 进制A+B.cpp 班级成绩输入输出.cpp 矩阵元素定位.cpp 序列重组矩阵.cpp 最高身高.cpp 矩阵相等判定.cpp 判断上三角矩阵.cpp 转置矩阵.cpp 杨辉三角.cpp 井字棋.cpp)
